[package]
name = "rust_spreadsheet"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
plotters = "0.3.5"
plotters-cairo = "0.3.0"
cairo-rs = "0.19.2"          # For the window GUI



[[bin]]
name = "main_simple"
path = "src/main_simple.rs"

[[bin]]
name = "main_simple_help"
path = "src/main_simple_help.rs"

[[bin]]
name = "main_new"
path = "src/main_new.rs"

[[bin]]
name = "chart"
path = "src/chart.rs"
