[package]
name = "rust_spreadsheet"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
plotters = "0.3.5" 
plotly = "0.12.1"  # or the latest version available
showata = "0.1" # for interactive


#sheet (tk later rename to main)
[[bin]]
name = "sheet"
path = "src/sheet.rs"

#vim interactive
[[bin]]
name = "main_simple"
path = "src/main_simple.rs"

[[bin]]
name = "main_simple_help"
path = "src/main_simple_help.rs"

[[bin]]
name = "main_new"
path = "src/main_new.rs"

[[bin]]
name = "chart"
path = "src/chart.rs"

[[bin]]
name = "server"
path = "src/server.rs"
