[package]
name = "rust_spreadsheet"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
plotters = "0.3.5" 
plotly = "0.12.1"  # or the latest version available
showata = "0.1" # for interactive
lazy_static = "1.4" #for pattern matching
regex = "1" #parsing



#autograder main file
[[bin]]
name = "sheet"
path = "src/main.rs"

#sheet (tk later rename to main)
#[[bin]]
#name = "sheet"
#path = "vim/sheet.rs"

#vim interactive
[[bin]]
name = "main_simple"
path = "vim/main_simple.rs"

[[bin]]
name = "main_simple_help"
path = "vim/main_simple_help.rs"

[[bin]]
name = "main_new"
path = "vim/main_new.rs"

[[bin]]
name = "chart"
path = "vim/chart.rs"

[[bin]]
name = "server"
path = "vim/server.rs"
